<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/sort_button"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/sort_by_distance"
                android:title="@string/sort_by_distance"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/sort_by_participants"
                android:title="@string/sort_by_participants"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/sort_by_rate"
                android:title="@string/sort_by_rate"
                app:showAsAction="never|withText" />
        </menu>
    </item>
</menu>