<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:ignore="NamespaceTypo">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/workmateslunch3" />

        <ImageView
            android:id="@+id/logo_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_go_4_lunch"
            android:src="@drawable/ic_logo_go4lunch"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_logo_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_app"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text2_logo_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_logo_app"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="60dp"
            android:text="@string/sign_in_second_title"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="italic" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/adapted_facebook_login_button"
            style="@style/SignInButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text2_logo_app"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/com_facebook_button_background_color"
            android:drawableLeft="@drawable/facebook_24"
            android:text="@string/adapted_facebook_login_button_text"
            app:targetApi="lollipop" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_google_button"
            style="@style/SignInButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adapted_facebook_login_button"
            android:drawableLeft="@drawable/google_plus_24"
            android:text="@string/google_login_button_text" />

</androidx.constraintlayout.widget.ConstraintLayout>