<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/restaurant_detail_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:backgroundTint="@color/colorAccent"
            app:borderWidth="10dp"
            app:layout_anchor="@+id/restaurant_detail_picture"
            app:layout_anchorGravity="bottom|right|end"
            app:rippleColor="#FFFEFE"
            android:tint="@color/colorWhite" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:orientation="vertical"
            tools:ignore="ScrollViewCount">

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/restaurant_detail_toolbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/ToolbarStyle" />
                </com.google.android.material.appbar.AppBarLayout>

                    <ImageView
                        android:id="@+id/restaurant_detail_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/restaurant_picture"
                        android:src="@drawable/ic_baseline_photo_24" />

                    <include
                        layout="@layout/progress_bar_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/restaurant_detail_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:padding="5dp"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@id/restaurant_detail_info"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RatingBar
                        android:id="@+id/restaurant_details_rate"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:theme="@style/RatingBarStyle"
                        app:layout_constraintBottom_toTopOf="@+id/restaurant_detail_info"
                        app:layout_constraintLeft_toRightOf="@+id/restaurant_detail_name"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/restaurant_detail_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textColor="@color/colorWhite"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/restaurant_detail_name" />

                    <Button
                        android:id="@+id/restaurant_detail_call_button"
                        style="@style/RestaurantDetailsButton"
                        android:drawableTop="@drawable/ic_baseline_call_24"
                        android:text="@string/call_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/restaurant_detail_like_button"
                        style="@style/RestaurantDetailsButton"
                        android:drawableTop="@drawable/ic_baseline_star_border_24"
                        android:text="@string/like_button"
                        app:layout_constraintEnd_toStartOf="@+id/restaurant_detail_website_button"
                        app:layout_constraintStart_toEndOf="@id/restaurant_detail_call_button"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/restaurant_detail_website_button"
                        style="@style/RestaurantDetailsButton"
                        android:drawableTop="@drawable/ic_baseline_public_24"
                        android:text="@string/website_button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="@color/colorLightGrey" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/restaurant_detail_recycle_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>